crates/relune-cli/tests/snapshots/integration_tests__config_unknown_nested_key.snap
---
source: crates/relune-cli/tests/integration_tests.rs
expression: "format!(\"exit_code: {exit_code}\\nstderr:\\n{stderr}\")"
---
exit_code: 2
stderr:
Error: Failed to load config file '$WORKSPACE/fixtures/config/unknown_nested_key.toml': Failed to parse config file: TOML parse error at line 2, column 1
  |
2 | tehme = "dark"
  | ^^^^^
unknown field `tehme`, expected one of `format`, `theme`, `layout`, `edge_style`, `direction`, `group_by`, `focus`, `depth`, `include`, `exclude`, `show_legend`, `show_stats`, `fail_on_warning`
